# finops-docs

./: .dockerignore  .env  .env.dev  .env.prod.example  .gitignore  Makefile  README.md  compose.override.yaml  compose.prod.yaml  compose.yaml  composer.json
assets/styles/: app.scss
config/: bundles.php  reference.php  services.yaml
docker/parser/: Dockerfile
docker/php/: Dockerfile  router.php
migrations/: Version20260701160637.php  Version20260701194547.php  Version20260702172909.php  Version20260702173825.php  Version20260712081139.php
parser/: pyproject.toml
parser/src/pdf_parser/: api.py  cli.py  extract_text.py  normalize.py  parse_fields.py  result.py  service.py
src/Command/: ApplyDocumentParserResultCommand.php  CreateTelegramDocumentFromPdfCommand.php  CreateUserCommand.php  ParseDocumentViaApiCommand.php  QueueDocumentParsingCommand.php  TestGoogleSheetsAppendCommand.php  WriteTelegramDocumentToGoogleSheetsCommand.php
src/Controller/: SecurityController.php
src/Entity/: AuditLog.php  Client.php  Document.php  GoogleSheetAppendLog.php  Operation.php  ParsedDocument.php  TelegramDocument.php  TelegramMessageLog.php  TelegramUser.php  User.php
src/Enum/: AuditAction.php  DocumentStatus.php  DocumentType.php  OperationStatus.php  OperationType.php
src/Form/: DocumentUploadType.php
src/Message/: ParseDocumentMessage.php  ProcessTelegramDocumentMessage.php
src/MessageHandler/: ParseDocumentMessageHandler.php  ProcessTelegramDocumentMessageHandler.php
src/Repository/: GoogleSheetAppendLogRepository.php  ParsedDocumentRepository.php  (+3 more)
(+60 files in other folders)
