[project]
name = "crm-pdf-parser"
version = "0.1.0"
description = "PDF parser for CRM operation documents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<1.0",
    "pypdf>=4.3,<5.0",
    "python-multipart>=0.0.20,<1.0",
    "uvicorn[standard]>=0.35,<1.0"
]

[project.scripts]
crm-pdf-parser = "pdf_parser.cli:main"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]